2006-07-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegate/fileopen.py:
	  (SplitProjectAction.is_doable): Check that there's more than one
	  subtitle.

	* lib/gaupol/gtk/delegate/test/test_edit.py:
	* lib/gaupol/gtk/delegate/test/test_fileopen.py:
	  Fixed test code.

	* data/glade/projsplit-dialog.glade:
	* lib/gaupol/gtk/dialog/projsplit.py:
	  Set minimum split point to 2.

2006-07-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegate/fileopen.py:
	  (on_append_file_activate): Call gtk.main_iteration() while
	  gtk.events_pending() to immediately destroy the dialog.

2006-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegate/edit.py:
	  (merge_subtitles): lstrip texts.

	* lib/gaupol/gtk/delegate/preview.py:
	  (on_preview_activate): Handle None value of col.

2006-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/enclib.py:
	  (get_locale_encoding): Do not call _translate on None but
	  instead raise ValueError. (Closes bug #6319)

2006-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/projsplit-dialog.glade:
	* lib/gaupol/gtk/delegate/fileopen.py:
	* lib/gaupol/gtk/dialog/projsplit.py:
	* lib/gaupol/gtk/dialog/test/test_projsplit.py:
	  Implemented project splitting.

2006-07-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegate/filesave.py:
	  (_restore_original): Catch OSError as well.

2006-07-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui/menubar.xml:
	* lib/gaupol/gtk/delegate/edit.py:
	* lib/gaupol/gtk/delegate/fileopen.py:
	* lib/gaupol/gtk/delegate/filesave.py:
	* lib/gaupol/gtk/delegate/position.py:
	* lib/gaupol/gtk/delegate/test/test_edit.py:
	* lib/gaupol/gtk/delegate/test/test_fileopen.py:
	* lib/gaupol/gtk/delegate/test/test_filesave.py:
	* lib/gaupol/gtk/dialog/file.py:
	* lib/gaupol/gtk/dialog/test/test_file.py:
	  Implemented file appending.
	  Moved some stuff around.

2006-07-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/__init__.py: